# Mimic

./: .gitignore  CLAUDE.md  PLAN.md  README.md  STATUS.md  pyproject.toml  test_full_stack.py
.claude/skills/: mimic-connector-author.md  mimic-determinism-check.md  mimic-prefab-author.md  mimic-release.md  mimic-scenario-author.md  mimic-schema-bump.md
.github/workflows/: bench.yml  determinism.yml  fibo-bump.yml  license.yml  release.yml  sbom.yml  test.yml
decision-record/: 2026-05-21-audit-grade-refusal.md  2026-05-21-connector-queue-deviation.md  2026-05-21-en-golden-correction.md  2026-05-21-runner-equivalence-criterion.md  2026-05-22-anthropic-model-choice.md  2026-05-22-concordia-vendoring-strategy.md  2026-05-22-runner-iri-resolution.md  README.md
docs/: LICENSE  README.md
docs/status/: 2026-05-21-coverage.md  2026-05-22-concordia-noise-floor.json  2026-05-22-f12-deepseek-fallback.md  2026-05-22-f12-step5-equivalence.md  2026-05-23-day30.md
eval/: README.md
eval/harness/: __init__.py  metrics.py  scorer.py
eval/harness/tests/: test_metrics.py
examples/: 01_quickstart.ipynb  02_custom_event.ipynb
hub/: CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
hub-client/: LICENSE  NOTICE  README.md  pyproject.toml
hub-client/hub_client/: __init__.py  client.py
hub-client/tests/: conftest.py  test_client.py
hub/app/: main.py
infra/: README.md
mimic/: __init__.py  cli.py
mimic/core/: orchestrator.py  twin.py
mimic/data/: cache.py  prices.py  sec.py
mimic/formulas/: __init__.py
scenarios/: CLAUDE.md  LICENSE
scenarios/2008-gfc-bank-cascade/: README.md  scenario.yaml
scenarios/covid-dash-for-cash-2020/: README.md  scenario.yaml
scenarios/cyber-cat-2026/: README.md  scenario.yaml
scenarios/eu-ai-act-model-risk-2026/: README.md  scenario.yaml
scenarios/svb-replay-2023/: README.md  scenario.yaml
scenarios/taiwan-strait-30d-closure/: README.md  scenario.yaml
scenarios/uk-gilt-ldi-2022/: README.md  scenario.yaml
scripts/: measure_concordia_noise_floor.py  record_svb_cassettes.py
tests/: conftest.py  test_context.py  test_formulas.py
tests/determinism/golden/: seed_manifest_v1.json  world_state_hash_v1.json
tests/equivalence/: __init__.py  conftest.py  noise_floor.py  test_equivalence.py  test_noise_floor.py
tests/fixtures/frozen-run/: README.md
