[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-framework"
version = "0.1.0"
description = "Compose foundation models into corporate decision agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["llm", "finance", "agents", "simulation", "sec", "economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "openai>=1.0",
    "rich>=13.0",
    "yfinance>=0.2",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
dotenv = [
    "python-dotenv>=1.0",
]

[project.scripts]
mimic = "mimic.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mimic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
